Fixed layout problem for horizontal render.

--- a/graph.css
+++ b/graph.css
@@ -39,8 +39,8 @@
 }
 
 .graphContainer .graphWrapper .graph.horizontal {
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .graphContainer .graphWrapper .graph .bar {
@@ -52,7 +52,7 @@
 }
 
 .graphContainer .graphWrapper .graph.horizontal .bar {
-  margin: 0;
+  margin: 1px 0;
   border-left: 0px;
   border-bottom: 1px solid #aaa;
 }
